# rm-harvester

./: .gitignore  Dockerfile  MANIFEST.in  README.md  config.yaml  docker-compose.yml  run-harvester.sh  setup.cfg  setup.py
.github/workflows/: image.yaml
harvester_eoepca/: app.patch  landsat.py  postprocess.py  provider.py  stac_catalog.patch
