[metadata]
name = harvester-eoepca
version = attr: harvester_eoepca.__version__
description = Harvester
long_description = file: README.md
long_description_content_type = text/markdown
author = Fabian Schindler
author_email = fabian.schindler@eox.at
url = https://github.com/stactools-sentinel2s/stactools-sentinel2
project_urls =
    Documentation = https://stactools-sentinel2.readthedocs.io/en/latest/
    Issues = https://github.com/EOEPCA/rm-harvester/issues
keywords =
    harvester
    EOEPCA
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = harvester_eoepca
# packages = find_namespace:
install_requires =
    stactools ~= 0.2.3

[options.packages.find]
where = harvester_eoepca
